# xti_mvbluefox_logger

./: .gitignore  CMakeLists.txt  README.md
include/: logger_common.h  logger_io.h
src/: CMakeLists.txt  logger.cpp  logger_io.cpp
